// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontIcon test should render correctly 1`] = `
<i
  className="fa crosshairs iconlist-item "
  title=".fa.crosshairs"
/>
`;

exports[`FontIcon test should render correctly in active state 1`] = `
<i
  className="fa crosshairs iconlist-item active"
  title=".fa.crosshairs"
/>
`;
